--- a/springboots-security-jwt/src/main/resources/templates/login.html
+++ b/springboots-security-jwt/src/main/resources/templates/login.html
@@ -26,5 +26,25 @@
         <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
     </table>
 </form>
+
+
+<form action="/authentication/mobile" method="post">
+    <table>
+        <tr>
+        <td>手机号：</td>
+        <td><input type="text" name="mobile" value="18136479379"></td>
+    </tr>
+        <tr>
+            <td>短信验证码:</td>
+            <td>
+                <input type="text" name="smsCode">
+                <a href="/code/sms?mobile=18136479379">发送验证码</a>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2"><button type="submit">登录</button></td>
+        </tr>
+    </table>
+</form>
 </body>
 </html>
